On Linux (but the observation applies to other Unices), when using a theme such as Ubuntu's Dust (with dark panels and menubars, but light grey application background color), the notification area icon of VLC does not blend with the surroundings.
To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information
Child items
...
Linked items
0
Link issues together to show that they're related.
Learn more.
A transparent icon needs an X11 visual with alpha channel. Unfortunately, VLC needs to disable those otherwise libQt4-gui will use ARGB visuals also for the video widget. This will make VLC essentially unable to play videos.
VLC user interface widgets must not have an alpha channel. On the other hand, the tray icon widget must have an alpha channel. I am not aware of any way to satisfy both requirements with the Qt4 API, i.e. enable alpha channel per widget rather than for the whole application.
There are two ways to solve this:
Someone explain to me how an X window without an non-alpha channel can be created with an X window with an alpha channel as its parent (I suspect this is not possible at all, but Xorg ARGB support is very poorly documented).
This apparent limitation of the Qt4-X11 API is resolved (in Qt4).
XVideo is extended to support rendering on ARGB X11 visuals.
Until then, this bug shall remain in wontfix state.